# sensapp

./: CMakeLists.txt  main.cpp  sensthread.cpp  sensthread.h
